# website

./: .gitignore  LICENSE.txt  Makefile  README.md  config.yml  pyproject.toml
.github/workflows/: deploy.yml  test.yml
pages/404/: index.md  meta.yml
pages/api/: index.md  meta.yml
pages/home/: index.md  meta.yml
pages/society/: index.md  meta.yml
pages/story/: index.md  meta.yml
scripts/: pyjokes_js_template.js  pyjokes_to_js.py
static/: robots.txt
static/css/: main.css
static/js/: pyjokes.js
templates/: home.pt  layout.pt  page.pt
