[project]
name = "pyjokes-website"
version = "0.1.0"
authors = [
    {name = "Ben Nuttall", email = "ben@bennuttall.com"}
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "beemo (>=0.3.1)",
    "pyjokes (>=0.8.3,<0.9.0)",
]
package-mode = false

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"